# power-rangers-api

./: .coveragerc  .editorconfig  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Procfile  README.md  makefile  pyproject.toml  setup.cfg
.github/workflows/: django.yml
.openshift/action_hooks/: deploy
docs/source/: conf.py  index.rst
src/: requirements.txt
src/allies/: admin.py  apps.py  models.py  tests.py
src/api/: urls.py
src/api/v1/: tests.py  urls.py  views.py
src/characters/: admin.py  apps.py  constants.py  models.py  tests.py
src/characters/fixtures/: characters.json
src/characters/migrations/: 0001_initial.py  0002_auto_20170223_0810.py  0003_auto_20170223_0815.py
src/civilians/: admin.py  apps.py  models.py  tests.py
src/civilians/fixtures/: civilians.json
src/civilians/migrations/: 0001_initial.py
src/config/: settings.py  urls.py
src/main/: params.default.py  settings.py  urls.py  wsgi.py
src/monsters/: admin.py  apps.py  models.py  tests.py
src/monsters/migrations/: 0001_initial.py
src/powerrangers/allies/: admin.py  apps.py  forms.py  models.py  serializers.py  tests.py  views.py
src/powerrangers/civilians/: admin.py  apps.py  forms.py  models.py  serializers.py  tests.py  views.py
src/rangers/: admin.py  apps.py  models.py  tests.py
src/series/: admin.py  models.py  tests.py
src/villains/: admin.py  apps.py  constants.py  models.py  tests.py
src/weapons/: admin.py  apps.py  models.py  tests.py
src/zords/: admin.py  apps.py  models.py  tests.py
wsgi/: application
(+105 files in other folders)
