[tool.poetry]
name = "powerrangers"
version = "0.1.0"
description = "Power Rangers API"
authors = ["Reinier van der Windt <reiniervdwindt@gmail.com>"]
license = "MIT"
packages = [
    { include = "config", from = "src" },
    { include = "powerrangers", from = "src" },
    { include = "manage.py", from = "src" },
]
exclude = [
    "src/powerrangers/*/tests*",
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
djangorestframework = "^3.14.0"
django-environ = "^0.9.0"
drf-spectacular = "^0.24.2"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
isort = "^5.10.1"
safety = "^2.3.3"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
